# airas-20251107-175001-matsuzawa

./: pyproject.toml
.research/: research_history.json
.research/iteration1/: stderr.txt  stdout.txt
.research/iteration1/wandb/latest-run/files/: config.yaml  requirements.txt
.research/iteration1/wandb/run-20251107_194111-proposed-iter1-CoNLL-2003/: run-proposed-iter1-CoNLL-2003.wandb
.research/iteration1/wandb/run-20251107_194111-proposed-iter1-CoNLL-2003/files/: config.yaml  wandb-metadata.json  wandb-summary.json
.research/iteration1/wandb/run-20251108_043925-comparative-1-iter1-CoNLL-2003/: run-comparative-1-iter1-CoNLL-2003.wandb
.research/iteration1/wandb/run-20251108_043925-comparative-1-iter1-CoNLL-2003/files/: wandb-metadata.json  (+1 more)
.research/prompt/analytic_subgraph/: analytic_node.txt  evaluate_method.txt
.research/prompt/create_code_subgraph/: generate_experiment_code.txt  generate_run_config.txt  validate_experiment_code.txt
.research/prompt/create_experimental_design_subgraph/: generate_experiment_design.txt
.research/prompt/create_hypothesis_subgraph/: evaluate_novelty_and_significance.txt  generate_hypothesis.txt  refine_hypothesis_0.txt  refine_hypothesis_1.txt  refine_hypothesis_2.txt  refine_hypothesis_3.txt  refine_hypothesis_4.txt
.research/prompt/generate_queries_subgraph/: generate_queries.txt
.research/prompt/judge_execution_subgraph/: judge_execution.txt
config/: config.yaml
config/runs/: comparative-1-iter1-CoNLL-2003.yaml  proposed-iter1-CoNLL-2003.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
